# jinya-ui-preview

./: .gitignore  Cargo.toml  package.json  webpack.config.js
src/: app.rs  lib.rs
src/pages/: buttons.rs  index.rs  mod.rs  multiline_alert.rs  oneline_alert.rs  splitview.rs  tabs.rs  toasts.rs
src/pages/dialogs/: confirmation.rs  content.rs  mod.rs
src/pages/form/: checkbox.rs  dropdown.rs  file_upload.rs  input.rs  multi_select.rs  radio.rs
src/pages/listing/: cards.rs  mod.rs  table.rs
